--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>Tabela Colorida</h1>
-    <table id="tabelaColorida">
+    <table id="tabelaColorida" border="4">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Status</th>
-                <th>Progresso</th>
+                <th bgcolor="#4CAF50">ID</th>
+                <th bgcolor="#2196F3">Nome 👧</th>
+                <th bgcolor="#000" style="color: aqua;">Status 🤳</th>
+                <th bgcolor="#000" style="color: aqua;">Progresso 👨‍💻👨‍💻👩‍💻</th>
             </tr>
         </thead>
         <tbody>
